# aris

./: README.md
ArisAGI_CPP/: CMakeLists.txt
ArisAGI_CPP/include/: agn_network.h  config.h  hdc.h  kernels.h  lif_neuron.h  main_window.h  memory.h  neuromodulation.h  simulation_manager.h  synapse.h
ArisAGI_CPP/src/: agn_network.cpp  hdc.cpp  kernels.cu  lif_neuron.cpp  main.cpp  main_window.cpp  memory.cpp  neuromodulation.cpp  simulation_manager.cpp  synapse.cpp
agi_prototype/: README.md  config.py  main.py
agi_prototype/src/: data_encoders.py  hdc.py  memory.py  network.py  neuromodulation.py  neurons.py  synapses.py
agi_prototype/ui/: gui.py
agi_prototype/utils/: metrics.py  visualization.py
